fix: reduce hero section spacing

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,18 @@
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:"Poppins",sans-serif}
 
-.light{background:#e8e2e2;color:#020617}
-.dark{background:radial-gradient(circle at top,#0b1025,#000814);color:#fff}
+.light{background:#ece4e4;color:#020617}
+.dark{background:radial-gradient(circle at top,#0b1025,#000814);color:#e9dfdf}
 
 /* ===== NAVBAR ===== */
 .navbar{
   position:sticky;top:0;z-index:1000;
   background:#0b174c;
-  padding:15px 30px;
+  padding:19px 30px;
   display:flex;justify-content:space-between;align-items:center
 }
 .navbar ul{list-style:none;display:flex;gap:22px}
-.navbar a{color:#fff;text-decoration:none;font-weight:500;transition:.3s}
+.navbar a{color:#b99fec;text-decoration:none;font-size:1.1rem;font-weight:550;transition:.3s}
 .navbar a:hover{color:#38bdf8}
 .toggle-btn{
   padding:6px 14px;border:1px solid #38bdf8;
@@ -30,7 +30,7 @@ body{font-family:"Poppins",sans-serif}
 .subtitle{font-size:1.3rem;margin:15px 0 30px;opacity:.85}
 
 
-.hero-buttons{display:flex;gap:18px}
+.hero-buttons{display:flex;gap:18px;justify-content:flex-start}
 .hero-buttons a{
   padding:14px 32px;border-radius:30px;
   background:linear-gradient(90deg,#38bdf8,#22d3ee);
@@ -108,15 +108,15 @@ body{font-family:"Poppins",sans-serif}
 }
 
 .section-title{
-  font-size:2.4rem;  /* ↓ very slight */
+  font-size:2.8rem;  /* ↓ very slight */
   margin-bottom:22px;
   text-align:left;
 }
 
 .about-text{
   max-width:750px;
-  font-size:1.1rem;
-  line-height:1.65;  /* ↓ was 1.8 */
+  font-size:1.18rem;
+  line-height:1.8;  /* ↓ was 1.8 */
   margin-bottom:40px; /* ↓ was 60px */
   opacity:.9;
 }
@@ -145,13 +145,13 @@ body{font-family:"Poppins",sans-serif}
 }
 
 .timeline-item h3{
-  font-size:1.25rem;
+  font-size:1.39rem;
   margin-bottom:4px;
   color:#38bdf8;
 }
 
 .timeline-item p{
-  font-size:1rem;
+  font-size:1.08rem;
   line-height:1.55;
   opacity:.9;
 }
@@ -356,7 +356,7 @@ body{font-family:"Poppins",sans-serif}
 
 /* ===== NAVBAR TEXT FIX ===== */
 .light .navbar{
-  background:#ffffff;
+  background:#c5aeae;
 }
 
 .light .navbar a{
@@ -454,8 +454,8 @@ body{font-family:"Poppins",sans-serif}
   display:flex;
   align-items:center;
   justify-content:center;
-  gap:80px;
-  padding:80px 8% 60px;
+  gap:70px;
+  padding:40px 8% 30px;
 }
 
 .hero-left{
